# people_management

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
curl_for_test/: README.md  create_user.sh
docker-compose-db/: docker-compose.yml
migrations/2024-08-17-204852_create_users/: up.sql
migrations/2024-08-18-225235_create_shared_accounts/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/routes/: users.rs
src/routes/users/: create.rs  delete.rs  inactive_management.rs  mod.rs  shared_management.rs  update.rs
