[package]
name = "people_management"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
